--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1271,37 +1271,73 @@ footer .payment img {
   font-size: 12px;
 }
 
-.finale{
+.finale {
   width: 80%;
-  margin-inline:  auto ;
+  margin-inline: auto;
   text-align: center;
 }
-.finale h4{
+
+.finale h4 {
   color: green;
   font-weight: 500;
   font-size: 24px;
 }
-.finale h5{
+
+.finale h5 {
   color: var(--color-777777);
   margin-top: 20px;
   font-size: 19px;
 }
-span.statue{
+
+span.statue {
   margin: 3px;
   padding: 2px 5px;
   border-radius: 5px;
-  font-size: 12px; 
+  font-size: 12px;
   color: var(--color-bf4800);
 }
+
 .ongoing {
-  background-color: #ff9f43; 
+  background-color: #ff9f43;
   color: #fff !important;
 }
 
 .confirmed {
-  background-color: green; 
+  background-color: #1b2850;
   color: #fff !important;
+}
 
+.delivered {
+  background-color: green;
+  color: #fff !important;
 }
 
 /*Dachbord ends */
+
+/*Loading*/
+
+
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  --_c: no-repeat radial-gradient(farthest-side, var(--color-232f3e) 92%, #0000);
+  background:
+    var(--_c) top,
+    var(--_c) left,
+    var(--_c) right,
+    var(--_c) bottom;
+  background-size: 12px 12px;
+  animation: l7 1s infinite;
+  position: absolute;
+  top: 50%;
+  left: 48%;
+}
+
+@keyframes l7 {
+  to {
+    transform: rotate(.5turn)
+  }
+}
+
+/*Loading ends*/
