--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1331,7 +1331,7 @@ span.statue {
   animation: l7 1s infinite;
   position: absolute;
   top: 50%;
-  left: 50%;
+  margin-inline: 47%;
 }
 
 @keyframes l7 {
@@ -1458,19 +1458,22 @@ span.statue {
   .categories p {
     font-size: 90%;
   }
-
   .categories>a:nth-child(1),
   .categories>a:nth-child(2) {
-    border-top: 0px;
+    border-top: 0px !important;
   }
+  .categories>a:nth-child(3),
+  .categories>a:nth-child(4){
+    border-top: 1px solid var(--color-ededed);
 
+  }
   .categories>a:nth-child(2),
   .categories>a:nth-child(4),
   .categories>a:nth-child(6),
   .categories>a:nth-child(8),
   .categories>a:nth-child(10),
   .categories>a:nth-child(12) {
-    border-right: 0px;
+    border-right: 0px !important;
   }
 
   .marque-wrapper img {
@@ -1586,6 +1589,7 @@ span.statue {
   .main-product-wrapper .singalerespo .gap-10 {
     margin-bottom: 20px;
   }
+
   .main-product-image img {
     width: 100% !important;
     height: 300px !important;
@@ -1616,8 +1620,12 @@ span.statue {
     width: 100%;
     margin-bottom: 20px;
   }
-
-
+  .finale h4 , .finale h5{
+    font-size: 100%;
+  }
+  .finale img{
+    width: 100px;
+  }
 }
 
 
